[project]
name = "impressive"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Yibo Wei", email = "david_wyb2001@outlook.com" }]
requires-python = ">=3.10"
dependencies = ["typing-extensions>=4.14.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
